src/test/ui/issues/issue-73886.stderr
error[E0605]: non-primitive cast: `&&[i32; 1]` as `&[_]`
  --> $DIR/issue-73886.rs:2:13
   |
LL |     let _ = &&[0] as &[_];
   |             ^^^^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error[E0620]: cast to unsized type: `u32` as `Option<_>`
  --> $DIR/issue-73886.rs:4:13
   |
LL |     let _ = 7u32 as Option<_>;
   |             ^^^^^^^^^^^^^^^^^
   |
help: consider using a box or reference as appropriate
  --> $DIR/issue-73886.rs:4:13
   |
LL |     let _ = 7u32 as Option<_>;
   |             ^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0605, E0620.
For more information about an error, try `rustc --explain E0605`.
